=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

** CHANGES ALONG siesta-3.0 branch

------------------------------------------------------------------------
2010-06-29  15:15:00 GMT Alberto Garcia <albertog@icmab.es>    3.0-rc1-7
Compute and print band-structure energy. Updates to Util/COOP/mprop

* The band-structure energy Ebs = Tr(DM*H) is now computed at every 
  iteration and printed at the beginning and end of the SCF cycle, both
  in the output file and in the CML file. The calculation is done in  
  compute_dm, so DM is the "output DM" from the diagonalization of H.

* The mprop program has been updated to output the integrated
  band-structure energy as a function of energy as a third column in
  the integrated-dos file. The " -n " option has been documented.

* Creation of Util/COOP/Docs, and addition of some notes on the units
  and meaning of the COOP and COHP curves.

added:
  Util/COOP/Docs/
  Util/COOP/Docs/UnitsAndMeaningOfCurves.txt
  Util/COOP/Tests/README
modified:
  Src/Makefile
  Src/compute_dm.F
  Src/m_energies.F90
  Src/write_subs.F
  Util/COOP/README
  Util/COOP/main_vars.f90
  Util/COOP/mprop.f90
  Util/COOP/subs.f90

------------------------------------------------------------------------
2010-06-29  14:50:00 GMT Alberto Garcia <albertog@icmab.es>    3.0-rc1-6
Make the HSX format the default for H,S files

The old HS format was highly inefficient, as each piece of data was
written to its own record. In addition, it only contained information
about the inter-orbital vectors Xij if k-points were used in the
calculation.

The new HSX file format was introduced at the time of the first
COOP/COHP implementation. It is more tightly packed, and the real
arrays (H, S, and Xij) are written in single-precision.

The HSX format is now the default in Siesta (TranSiesta has its own
format).
